<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="technology">Technology</string>
    <string name="sport">Sport</string>
    <string name="science">Science</string>
    <string name="business">Business</string>
    <string name="main_content">Main content is here</string>
    <string name="main_title">Main title is here</string>
    <string name="author">Here is author</string>
    <string name="date">Here is a date</string>
    <string name="news_feed">News Feed</string>
    <string name="us">us</string>
    <string name="it">it</string>
    <string name="ru">ru</string>
</resources>